--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,17 +4,32 @@
     <i class="icon ion-android-menu"></i>
   </a>
 
+  <span class="navbar-heading mr-3">
+    <img class="logo" src="assets/images/logo.png" />
+  </span>
+
   <span class="navbar-heading mr-3">{{heading}}</span>
 
   <span class="nav-divider mx-3 d-none d-sm-block"></span>
 
+  <span class="nav-divider mx-3 d-none d-sm-block"></span>
+
+  <form class="form-search form-inline ml-3 d-none d-sm-block">
+    <div class="d-flex align-items-center">
+      <i class="icon ion-ios-search mr-2"></i>
+      <input class="form-control border-0 no-bg fw-300" type="text" placeholder="Search for widgets...">
+    </div>
+  </form>
+
+  <span class="mr-auto"></span>
+
   <ul class="navbar-nav mx-3">
     <li class="nav-item" ngbDropdown placement="bottom-left">
       <a href="javascript:;" class="nav-link" ngbDropdownToggle container="body" placement="bottom" ngbTooltip="Notifications">
-        <i class="icon ion-ios-world"></i>
+        <i class="icon ion-ios-bell"></i>
         <span class="badge badge-danger">4</span>
       </a>
-      <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right notifications">
+      <!-- <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right notifications">
         <div class="notifications-wrapper">
           <a href="javascript:;" class="dropdown-item">
             <span class="badge badge-warning">NEW</span>
@@ -37,9 +52,9 @@
         <div class="notification-footer">
             <a href="javascript:;" class="dropdown-item">See all notifications</a>
         </div>
-      </div>
+      </div> -->
     </li>
-    <li class="nav-item" ngbDropdown placement="bottom-left">
+    <!-- <li class="nav-item" ngbDropdown placement="bottom-left">
       <a href="javascript:;" class="nav-link" ngbDropdownToggle container="body" placement="bottom" ngbTooltip="Quick launch">
         <i class="icon ion-ios-keypad"></i>
       </a>
@@ -97,24 +112,13 @@
           </div>
         </div>
       </div>
-    </li>
-    <li class="nav-item">
+    </li> -->
+    <!-- <li class="nav-item">
       <a href="javascript:;" [routerLink]="['/docs']" class="nav-link" container="body" placement="bottom" ngbTooltip="Help">
         <i class="icon ion-ios-help"></i>
       </a>
-    </li>
+    </li> -->
   </ul>
-
-  <span class="nav-divider mx-3 d-none d-sm-block"></span>
-
-  <form class="form-search form-inline ml-3 d-none d-sm-block">
-    <div class="d-flex align-items-center">
-      <i class="icon ion-ios-search mr-2"></i>
-      <input class="form-control border-0 no-bg fw-300" type="text" placeholder="Search for widgets...">
-    </div>
-  </form>
-
-  <span class="mr-auto"></span>
 
   <ul class="navbar-nav">
     <li class="nav-item" ngbDropdown placement="bottom-right">
@@ -143,11 +147,11 @@
     </li>
   </ul>
 
-  <ul class="navbar-nav ml-3">
+  <!-- <ul class="navbar-nav ml-3">
     <li class="nav-item">
       <a href="" class="nav-link" [routerLink]="['/pages/pricing']">
         <button class="btn btn-secondary btn-sm px-3">Upgrade</button>
       </a>
     </li>
-  </ul>
+  </ul> -->
 </nav>
