--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,9 +1,13 @@
 :host {
-    .widget-icon {
-      width: 30px;
-      height: 30px;
-      line-height: 30px;
-      font-size: 12px;
-      text-align: center;
-    }
+  .widget-icon {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 12px;
+    text-align: center;
   }
+}
+
+.logo {
+  height: 50px;
+}
