--- a/src/assets/styles/scss/_theming.scss
+++ b/src/assets/styles/scss/_theming.scss
@@ -146,15 +146,15 @@ $summer-theme-foreground: (
 // Eclipse theme
 // ******
 $eclipse-theme-background: (
-  background:       #3a3a3a,
-  header:           map_get($mat-grey, 800),
-  sidebar:          rgba(51, 51, 51, 1.00),
-  brand:            rgba(51, 51, 51, 1.00),
+  background:       map_get($mat-blue-grey, 900),
+  header:           map_get($mat-blue-grey, 900),
+  sidebar:          map_get($mat-blue-grey, 800),
+  brand:            map_get($mat-blue-grey, 900),
   hover:            rgba(white, 0.04),
   hover-o:          rgba(white, 0.05),
-  card:             map_get($mat-grey, 800),
-  modal:            map_get($mat-grey, 800),
-  secondary-button: map-get($mat-grey, 800),
+  card:             map_get($mat-blue-grey, 800),
+  modal:            map_get($mat-blue-grey, 800),
+  secondary-button: map-get($mat-blue-grey, 800),
   selected-cell:    theme-colors("primary"),
   chart-tooltip:    rgba(51, 51, 51, 1.00),
 );
