--- a/src/assets/styles/scss/core/_sidebar.scss
+++ b/src/assets/styles/scss/core/_sidebar.scss
@@ -185,6 +185,7 @@ mat-sidenav.sidebar-panel {
           width: 100%;
           padding: 0;
           margin: 0;
+          font-size: 35px;
         }
       }
 
