- added fontawesome, circle progress

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -13,9 +13,9 @@
     </svg> -->
   </a>
 
-  <a href="javascript:;" class="docked-hidden preferances-icon" container="body" placement="bottom" ngbTooltip="Preferances" (click)="options.settings = !options.settings">
+  <!-- <a href="javascript:;" class="docked-hidden preferances-icon" container="body" placement="bottom" ngbTooltip="Preferances" (click)="options.settings = !options.settings">
     <i class="icon ion-ios-cog"></i>
-  </a>
+  </a> -->
 </nav>
 
 <!-- main navigation -->
