--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -15,3 +15,4 @@ $app-theme:   mat-light-theme($app-primary, $app-accent);
 @import "scss/theming";
 @import "scss/custom-bootstrap";
 @import "scss/core";
+// @import "scss/circle";
