- fixed posts progress bar

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,8 +3,23 @@
     <div class="card">
       <div class="card-body px-0 py-4 rounded-bottom">
         <div class="content-center">
-          <div class="c100 p90 blue">
-            <span>90%</span>
+          <div class="c100 p90 green">
+            <span class="fa fa-quote-right"></span>
+            <div class="slice">
+              <div class="bar"></div>
+              <div class="fill"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="card">
+      <div class="card-body px-0 py-4 rounded-bottom">
+        <div class="content-center">
+          <div class="c100 p90 dark-blue">
+            <span class="fa fa-twitter"></span>
             <div class="slice">
               <div class="bar"></div>
               <div class="fill"></div>
@@ -19,7 +34,7 @@
       <div class="card-body px-0 py-4  rounded-bottom">
         <div class="content-center">
           <div class="c100 p90 blue">
-            <span>90%</span>
+            <span class="fa fa-facebook"></span>
             <div class="slice">
               <div class="bar"></div>
               <div class="fill"></div>
@@ -33,23 +48,8 @@
     <div class="card">
       <div class="card-body px-0 py-4  rounded-bottom">
         <div class="content-center">
-          <div class="c100 p90 blue">
-            <span>90%</span>
-            <div class="slice">
-              <div class="bar"></div>
-              <div class="fill"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-12 col-md-6 col-lg-3">
-    <div class="card">
-      <div class="card-body px-0 py-4  rounded-bottom">
-        <div class="content-center">
-          <div class="c100 p90 blue">
-            <span>90%</span>
+          <div class="c100 p90 pink">
+            <span class="fa fa-instagram"></span>
             <div class="slice">
               <div class="bar"></div>
               <div class="fill"></div>
