--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -14,3 +14,19 @@
   display: flex;
   justify-content: center;
 }
+
+.green {
+  color: #4db53c !important;
+}
+
+.dark-blue {
+  color: #3f597b !important;
+}
+
+.blue {
+  color: #307bbb !important;
+}
+
+.pink {
+  color: #c03395 !important;
+}
