--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -2,13 +2,8 @@
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
       <a class="nav-link text-color" href="javascript:;">
-        <span>Copyright &copy; 2017</span> <span class="text-uppercase">Stacked</span>. All rights reserved
+        <span>Copyright &copy; 2018</span>. darkferet.com
       </a>
-    </li>
-  </ul>
-  <ul class="navbar-nav hidden-xs-down">
-    <li class="nav-item">
-      <a class="nav-link text-color" href="javascript:;">Made with love on Earth</a>
     </li>
   </ul>
 </nav>
