--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,25 @@
 <div class="row">
+  <div class="col-sm-12">
+    <div class="card">
+      <div class="tool-bar">
+        <form class="form-inline">
+          <div class="form-group">
+            <label>From : </label>
+            <div class="form-group">
+              <select class="form-control">
+                <option>Jonathon Smith</option>
+                <option>John Doe</option>
+                <option>Bill Smith</option>
+              </select>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
   <div class="col-sm-12 col-md-6 col-lg-3">
     <div class="card">
       <div class="card-body px-0 py-4 rounded-bottom">
@@ -103,7 +124,7 @@
             class="chart-container"
             [scheme]="colorScheme"
             [schemeType]="schemeType"
-            [results]="dateDataWithOrWithoutRange"
+            [results]="dateData"
             [legend]="showLegend"
             (legendLabelClick)="onLegendLabelClick($event)"
             [gradient]="gradient"
@@ -129,7 +150,7 @@
 <div class="row">
   <div class="col-md-6">
     <div class="card">
-      <div class="card-header no-shadow">Basic Map</div>
+      <div class="card-header no-shadow">Posts by Geographic Region</div>
       <div class="card-body p-0">
         <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom"></agm-map>
       </div>
@@ -137,7 +158,7 @@
   </div>
   <div class="col-md-6">
     <div class="card">
-      <div class="card-header no-shadow">Styled Map</div>
+      <div class="card-header no-shadow">World Cloud</div>
       <div class="card-body p-0">
       </div>
     </div>
